--- a/gb/19/5/5/n11235674.md
+++ b/gb/19/5/5/n11235674.md
@@ -1,58 +1,60 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/mprjd2205/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/mprjd2205/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/05/190505054240100055-600x400.jpg" />
-<h6>2019Äê5ÔÂ4ÈÕÍí£¬ÔÚÃÀ¹úÌ´ÏãÉ½²¼ÀûË¹÷ì¶ûÒôÀÖÌü£¨Honolulu Blaisdell Concert Hall£©£¬¹«Ë¾ÀÏ°åHarold Spindel£¨ÓÒ¶þ£©Ð¯Ì«Ì«Linda£¨ÓÒÒ»£©ÓëÓÑÈËPeter£¨×ó¶þ£©¼°Ì«Ì«Pricilia£¨×óÒ»£©Ò»Í¬¹Û¿´ÁËÉñÔÏÊÀ½çÒÕÊõÍÅµÄ¾«²ÊÑÝ³ö¡££¨ÁÖÄÏÓî£¯´ó¼ÍÔª£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yxhgbq3433/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/yxhgbq3433/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>ä½“éªŒå®Œç¾Ž å…¬å¸è€æ¿ç››èµžç¥žéŸµæ¼”å‡ºæ°´å‡†é«˜è¶…</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/05/190505054240100055-600x400.jpg" />
+<h6>2019å¹´5æœˆ4æ—¥æ™šï¼Œåœ¨ç¾Žå›½æª€é¦™å±±å¸ƒåˆ©æ–¯é»›å°”éŸ³ä¹åŽ…ï¼ˆHonolulu Blaisdell Concert Hallï¼‰ï¼Œå…¬å¸è€æ¿Harold Spindelï¼ˆå³äºŒï¼‰æºå¤ªå¤ªLindaï¼ˆå³ä¸€ï¼‰ä¸Žå‹äººPeterï¼ˆå·¦äºŒï¼‰åŠå¤ªå¤ªPriciliaï¼ˆå·¦ä¸€ï¼‰ä¸€åŒè§‚çœ‹äº†ç¥žéŸµä¸–ç•Œè‰ºæœ¯å›¢çš„ç²¾å½©æ¼”å‡ºã€‚ï¼ˆæž—å—å®‡ï¼å¤§çºªå…ƒï¼‰
 </h6>
 <hr>
-	<p>¡¾´ó¼ÍÔª2019Äê05ÔÂ05ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÁÖÄÏÓîÃÀ¹úÌ´ÏãÉ½±¨µ¼£©2019Äê5ÔÂ4ÈÕÍí£¬ÔÚÃÀ¹ú<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E6%AA%80%E9%A6%99%E5%B1%B1%E5%B8%83%E5%88%A9%E6%96%AF%E9%BB%9B%E5%B0%94%E9%9F%B3%E4%B9%90%E5%8E%85.md">Ì´ÏãÉ½²¼ÀûË¹÷ì¶ûÒôÀÖÌü</a>£¨Honolulu Blaisdell Concert Hall£©£¬<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">ÉñÔÏ</a>ÊÀ½çÒÕÊõÍÅÔÚµ±µØµÄµÚ¶þ³¡ÑÝ³öÒýÈËÖõÄ¿£¬ÏÖ³¡¹ÛÖÚ¸ÐÎòÉñÔÏ<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E7%A5%9E%E6%80%A7.md">ÉñÐÔ</a>ÄÚº­º³¶¯ÈËÐÄ£¬²¢ÔÞÅåÉñÔÏÊÇ¡°¼«¸ßË®×¼µÄÑÝ³ö¡±¡£</p>
-<p>¹«Ë¾ÀÏ°åHarold SpindelÐ¯Ì«Ì«Linda¼°ÓÑÈËPeterºÍPricilia·ò¸¾Ò»Í¬Ç°À´¹Û¿´ÑÝ³ö¡£ÑÝ³ö½áÊøºó£¬ËûÃÇÔÚ¾çÔºÍâÈÈÒé¸Õ¸Õ¿´¹ýµÄ<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">ÉñÔÏ</a>ÑÝ³ö¡£SpindleÏÈÉúÎªÉñÔÏ¾«Õ¿µÄÒÕÊõ¸ÐÈ¾Á¦½ÐºÃ£¬¡°ÎÒÃÇÄÜ¹»ÔÚÕâ¶ù¿´µ½Èç´Ë¸ßË®×¼µÄÒÕÊõÑÝ³ö£¬ÕæÊÇ·Ç³£ÃÀºÃ¡£¡±</p>
-<p>ËûÔÞÅåÉñÔÏÎèµ¸¼ÒÃÇÄêÇáÓÐÎª¡¢Îè×ËÓÅÃÀ´óÆø£¬¡°ÑÝ³öÖÐµÄÑÝÔ±ÃÇ¶¼ÊÇÄÇÃ´µÄÄêÇá£¬ËûÃÇÓÐ×Å×î³äÅæµÄÌåÁ¦¡£ÄÜ¹»ÓÐÕâÐ©ÄêÇáµÄÒÕÊõ¼ÒÔÚÕâÀïÕ¹Ê¾<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E6%96%87%E5%8C%96.md">ÖÐ»ªÎÄ»¯</a>£¬ÕæÊÇÒ»¼þÔÙºÃ²»¹ýµÄÊÂÇéÁË¡£¡±</p>
-<p>Spindel·Ç³£ÔÞÅåÎèµ¸ÑÝÔ±ËùÕ¹ÏÖµÄ¸ß³¬¼¼ÇÉ£¬ËûºÜºÃÆæÕâÐ©ÑÝÔ±ÃÇÊÇÈçºÎÁ·¾ÍÒ»Éí¹¦·ò£¬¡°ÄÇÐ©ÑÝÔ±ÊÇ·ñ¾­¹ýÖÁÉÙÊ®ÄêµÄ¼è¿àÑµÁ·£¬²Å´ïµ½Èç´Ë¸ß³¬µÄË®Æ½£¿¡±Ëû¸ÐÌ¾µÀ£¬¡°ËûÃÇÈ«Éí³äÂúÁËÄÜÁ¿£¬ÁîÈËÌ¾Îª¹ÛÖ¹£¡¡±</p>
-<p>SpindelÈÏÎªÄÜ¹»ÐÀÉÍµ½Èç´Ë¾«ÃÀµÄÒÕÊõÊµÔÚÊÇ·Ç³£ÈÙÐÒ£¬Ëû±íÊ¾ÉñÔÏµÄÎèµ¸ÓëÒôÀÖÅäºÏµÄÄ¬ÆõÁîÈËÔÞÌ¾£¬¡°Õâ³¡ÑÝ³öÕæµÄ·Ç³£ÍêÃÀ£¬¶Ôº¢×ÓÃÇÒÔ¼°ÄêÇáÈËÀ´½²£¬¶¼ºÜÊÜÒæ¡£¡±</p>
-<p>Harold SpindelÏÈÉúµÄÓÑÈËPriciliaËµËýÃÇÔø¾­ÓÎÀú¹ýÖÐ¹úÄÏ·½£¬¡°ÎÒÈÏÎªÑÝ³öÖÐµÄÀÖÍÅ·Ç³£ÁË²»Æð¡£¡±¡°·þÊÎ¡¢Îèµ¸·Ç³£ÒýÈËÈëÊ¤¡£ÎÒÈ·ÊµÌÕ×íÓÚÑÝ³öÖ®ÖÐ¡£¡±</p>
-<p>PriciliaµÄÕÉ·òPeterÊÇÎ»ÒôÀÖ°®ºÃÕß¡£ËûÒ²·Ç³£Ï²°®ÉñÔÏµÄÒôÀÖ£¬ËûËµ£¬¡°ÏÖ³¡ÀÖÍÅµÄÑÝ×àÊ®·Ö¾«²Ê£¬ÎÒ·Ç³£Ï²°®ÄÇ¸öÀÖÍÅ¡£¡±</p>
-<p>ÔðÈÎ±à¼­£ºÍõÓäÔÃ</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´05æœˆ05æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…æž—å—å®‡ç¾Žå›½æª€é¦™å±±æŠ¥å¯¼ï¼‰2019å¹´5æœˆ4æ—¥æ™šï¼Œåœ¨ç¾Žå›½<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E6%AA%80%E9%A6%99%E5%B1%B1%E5%B8%83%E5%88%A9%E6%96%AF%E9%BB%9B%E5%B0%94%E9%9F%B3%E4%B9%90%E5%8E%85.md#1">æª€é¦™å±±å¸ƒåˆ©æ–¯é»›å°”éŸ³ä¹åŽ…</a>ï¼ˆHonolulu Blaisdell Concert Hallï¼‰ï¼Œ<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">ç¥žéŸµ</a>ä¸–ç•Œè‰ºæœ¯å›¢åœ¨å½“åœ°çš„ç¬¬äºŒåœºæ¼”å‡ºå¼•äººçž©ç›®ï¼ŒçŽ°åœºè§‚ä¼—æ„Ÿæ‚Ÿç¥žéŸµ<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E7%A5%9E%E6%80%A7.md#1">ç¥žæ€§</a>å†…æ¶µæ’¼åŠ¨äººå¿ƒï¼Œå¹¶èµžä½©ç¥žéŸµæ˜¯â€œæžé«˜æ°´å‡†çš„æ¼”å‡ºâ€ã€‚</p>
+<p>å…¬å¸è€æ¿Harold Spindelæºå¤ªå¤ªLindaåŠå‹äººPeterå’ŒPriciliaå¤«å¦‡ä¸€åŒå‰æ¥è§‚çœ‹æ¼”å‡ºã€‚æ¼”å‡ºç»“æŸåŽï¼Œä»–ä»¬åœ¨å‰§é™¢å¤–çƒ­è®®åˆšåˆšçœ‹è¿‡çš„<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">ç¥žéŸµ</a>æ¼”å‡ºã€‚Spindleå…ˆç”Ÿä¸ºç¥žéŸµç²¾æ¹›çš„è‰ºæœ¯æ„ŸæŸ“åŠ›å«å¥½ï¼Œâ€œæˆ‘ä»¬èƒ½å¤Ÿåœ¨è¿™å„¿çœ‹åˆ°å¦‚æ­¤é«˜æ°´å‡†çš„è‰ºæœ¯æ¼”å‡ºï¼ŒçœŸæ˜¯éžå¸¸ç¾Žå¥½ã€‚â€</p>
+<p>ä»–èµžä½©ç¥žéŸµèˆžè¹ˆå®¶ä»¬å¹´è½»æœ‰ä¸ºã€èˆžå§¿ä¼˜ç¾Žå¤§æ°”ï¼Œâ€œæ¼”å‡ºä¸­çš„æ¼”å‘˜ä»¬éƒ½æ˜¯é‚£ä¹ˆçš„å¹´è½»ï¼Œä»–ä»¬æœ‰ç€æœ€å……æ²›çš„ä½“åŠ›ã€‚èƒ½å¤Ÿæœ‰è¿™äº›å¹´è½»çš„è‰ºæœ¯å®¶åœ¨è¿™é‡Œå±•ç¤º<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E6%96%87%E5%8C%96.md#1">ä¸­åŽæ–‡åŒ–</a>ï¼ŒçœŸæ˜¯ä¸€ä»¶å†å¥½ä¸è¿‡çš„äº‹æƒ…äº†ã€‚â€</p>
+<p>Spindeléžå¸¸èµžä½©èˆžè¹ˆæ¼”å‘˜æ‰€å±•çŽ°çš„é«˜è¶…æŠ€å·§ï¼Œä»–å¾ˆå¥½å¥‡è¿™äº›æ¼”å‘˜ä»¬æ˜¯å¦‚ä½•ç»ƒå°±ä¸€èº«åŠŸå¤«ï¼Œâ€œé‚£äº›æ¼”å‘˜æ˜¯å¦ç»è¿‡è‡³å°‘åå¹´çš„è‰°è‹¦è®­ç»ƒï¼Œæ‰è¾¾åˆ°å¦‚æ­¤é«˜è¶…çš„æ°´å¹³ï¼Ÿâ€ä»–æ„Ÿå¹é“ï¼Œâ€œä»–ä»¬å…¨èº«å……æ»¡äº†èƒ½é‡ï¼Œä»¤äººå¹ä¸ºè§‚æ­¢ï¼â€</p>
+<p>Spindelè®¤ä¸ºèƒ½å¤Ÿæ¬£èµåˆ°å¦‚æ­¤ç²¾ç¾Žçš„è‰ºæœ¯å®žåœ¨æ˜¯éžå¸¸è£å¹¸ï¼Œä»–è¡¨ç¤ºç¥žéŸµçš„èˆžè¹ˆä¸ŽéŸ³ä¹é…åˆçš„é»˜å¥‘ä»¤äººèµžå¹ï¼Œâ€œè¿™åœºæ¼”å‡ºçœŸçš„éžå¸¸å®Œç¾Žï¼Œå¯¹å­©å­ä»¬ä»¥åŠå¹´è½»äººæ¥è®²ï¼Œéƒ½å¾ˆå—ç›Šã€‚â€</p>
+<p>Harold Spindelå…ˆç”Ÿçš„å‹äººPriciliaè¯´å¥¹ä»¬æ›¾ç»æ¸¸åŽ†è¿‡ä¸­å›½å—æ–¹ï¼Œâ€œæˆ‘è®¤ä¸ºæ¼”å‡ºä¸­çš„ä¹å›¢éžå¸¸äº†ä¸èµ·ã€‚â€â€œæœé¥°ã€èˆžè¹ˆéžå¸¸å¼•äººå…¥èƒœã€‚æˆ‘ç¡®å®žé™¶é†‰äºŽæ¼”å‡ºä¹‹ä¸­ã€‚â€</p>
+<p>Priciliaçš„ä¸ˆå¤«Peteræ˜¯ä½éŸ³ä¹çˆ±å¥½è€…ã€‚ä»–ä¹Ÿéžå¸¸å–œçˆ±ç¥žéŸµçš„éŸ³ä¹ï¼Œä»–è¯´ï¼Œâ€œçŽ°åœºä¹å›¢çš„æ¼”å¥ååˆ†ç²¾å½©ï¼Œæˆ‘éžå¸¸å–œçˆ±é‚£ä¸ªä¹å›¢ã€‚â€</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šçŽ‹æ„‰æ‚¦</p>
 	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/5/5/n11235674.htm"></a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/8/19/n11462379.htm">²ÌÇÙ·­³ª¡¶¸æ°×ÆøÇò¡· ÖÜ¶­£º°¥ßÏ²Ì½ã²»´íÅ¶</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/18/n11391565.htm">À¥ÁèÊ±ÉÐ°®ÔË¶¯ ³ÉÖªÃûÆ·ÅÆ×îÐÂÈ«Çò´úÑÔÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/20/n11336607.htm">ÖÜ¶­·ò¸¾´òÀºÇòÐã¶÷°® À¥ÁèÔËÇòÅÜÎ»ÈýÍ¶ÈýÖÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/15/n11260150.htm">À¥Áè¿²³ÇÓ°Õ¹ÁÁÏà ÖÜ½ÜÂ×°ç·ÛË¿Î§¹Û</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/2/n11229766.htm">ÎªÅÄÏ·³£´ø¶ùÅ®µ¹Ê±²î À¥Áè£ºÎÒÊÇ¸ö×ÔË½µÄÂè</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/11/n11038441.htm">ÏÖÉíÖÜ½ÜÂ×ÑÝ³ª»á ÕÂ×ÓâùÉ¹ÓëÀ¥ÁèÇ×ÃÜºÏÓ°</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/16/n10980015.htm">ÖÜ½ÜÂ×É¹ÂèÂèÊ±ÉÐÕÕ À¥ÁèÒ»¾ä»°¼ûÖ¤ÆÅÏ±¸ÐÇé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/7/n10958529.htm">À¥ÁèµÇÊ±ÉÐÔÓÖ¾·âÃæ ¸öÐÔ°®¶ñ×÷¾ç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/7/27/n10596149.htm">Â¼½ÚÄ¿ÏòÖÜ¶­Ñû¸è£¿ÀîÒ×·å£ºÅÂ±»¾Ü¾øºÜÞÏÞÎ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/3/13/n10215306.htm">À¥Áè·ÖÏíÖÜ¶­ÌùÐÄÐ¡¾Ù¶¯ ÆØ²»ÈÃ¶ùÅ®Â¶Á³Ô­Òò</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11638837.htm">ÀëÆæËÀÍöµÄÖØÇìÊé¼ÇÈÎÑ§·æ ±»Ö¸Éæ¶àÆðÔ©°¸</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11640298.htm">ÖÐÐ¡ÒøÐÐ¼·¶Ò³±ÆµÏÖ ÖÐ¹²½ðÈÚÎ¯¼±ÉÌ¶Ô²ß</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639897.htm">¡¾ÐÂÎÅ¿´µã¡¿ÃÀÖØÉêÍ£»ðµ×Ïß ±±¾©´ó¶¯×÷Ê¾ºÃ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639300.htm">¼ÌÍõË¼´Ïºó ÅËÊ¯ÒÙ¶ù×ÓÅËÈðÇå¿ÕÎ¢²©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/11/n11582046.htm">ÌÆ´úÊ¹ÕßÆ¯Á÷µ½¾ÞÈË¹ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11625562.htm">¡¾²Å×Ó¼ÑÈË¡¿½èººÈËÉí·Ý¼ÞÇ¬Â¡ÔøËïµÄÂúÇå²ÅÅ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/4/21/n4416242.htm">Ôã¿·Ö®ÆÞ²»ÏÂÌÃ ¹ÅÈËÊÓ»éÒöÎªÈËÂ×Ö®±¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11612042.htm">¡¾²Å×Ó¼ÑÈË¡¿Áº×£µÄ¹ÊÊÂ ÎÒÃÇ¶Á¶®ÁËÂð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638183.htm">¶ÅãëÔóÉàÕ½³Â°ÙÏéºóºôÓõ£º¼¯ÖÐ¾«Éñ×ö¶ÔµÄÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635898.htm">ÕÂ×ÓâùÊÔ¾µÈÕ±¾ÒÕ¼¿ ÔøÒò½öËµËÄ¸ö×Ö²ÒÔâÌÔÌ­</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639534.htm">ÁÖÖ¾Áá17ÈÕ»éÑç ÁÖÒÀ³¿ÊÕÏ²ÌûÒÅº¶ÎÞ·¨¸°Ñç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635562.htm">É¹Í··¢ÕÚÑÛ¼Ó¿ÚÕÖÉú»îÕÕ ÈÝ×æ¶ùÒÉÔâ´óÂ½·âÉ±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635746.htm">ÑöÍû45¶È³ª×ËÔµºÎÁ·³É ·ÑÓñÇå½Ò¸èÊÖÉúÑÄÃØÐÁ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/4/16/n10309074.htm">¡¾Ãû¾ä¹ÊÊÂ¡¿´óÊ÷½«¾ü</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11640231.htm">¡¾ÐÂÎÅ¿´µã¡¿ËÄÖÐÇ¿»¯µ³¹ú Ðé»¯ÈËÃñ ¸Ä¸ïÒÑËÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639377.htm">ÈÏÇåÖÐ¹²²Ð±© ¸ÛÈË¶Ô·¨ÂÖ¹¦µÄÈÏÊ¶Óú¼ÓÕýÃæ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636669.htm">Íõ½¡ÁÖ¶À×ÓÍõË¼´ÏÁÐÈë±»Ö´ÐÐÈËÃûµ¥ µÇÉÏÈÈËÑ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636278.htm">¡¾·­Ç½±Ø¿´¡¿·ÖÎö£ºËÄÖÐÈ«»á¹«±¨»òÐ¹´óÃØÃÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638219.htm">ÁÖÖ£±»Ï°º«°ÚÉÏÌ¨ Ïã¸Û²½ÈëºÚ°µÊ±ÆÚ</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/5/12/n7886718.md#1">äºšæ´²å·¡æ¼”å½’æ¥ ç¥žéŸµä¸–ç•Œè‰ºæœ¯å›¢è¿”æŠµçº½çº¦</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/17/5/11/n9132785.md#1">ç»“æŸæ¬§æ´²å·¡æ¼” ç¥žéŸµä¸–ç•Œè‰ºæœ¯å›¢è½½èª‰è¿”çº½çº¦</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/1/n11225535.md#1">ç¥žéŸµå°æ¹¾å·¡æ¼”è½å¹• è§‚ä¼—æ„Ÿä½©â€œæ‹¯æ•‘ä¸–ç•Œâ€</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/1/n11225588.md#1">è§‚ç¥žéŸµ çŸ³æ²¹å·¥ä¼šå¸¸åŠ¡ç†äº‹å¤«å¦‡ï¼šæˆ‘ä»¬ä¼šå†æ¥</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/1/n11225911.md#1">åŒ»é™¢æ‰§è¡Œé•¿ç››èµžç¥žéŸµç»è‰ºä¼ å’</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/1/n11226533.md#1">ç¥žéŸµåˆ°å¤„å……æ»¡æƒŠå–œ ç§‘æŠ€å…¬å¸è‘£åº§æ·±å—éœ‡æ’¼</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mprjd2205/djy/blob/master/gb/19/5/5/n11235674.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/23/n10243539.md#1" target="_blank">ä¸­å…±æ·«ä¹±çš„å‰ç”Ÿä»Šä¸–ï¼ˆ5ï¼‰å…¬å…±æƒ…å¦‡é—¨</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/11/n10902768.md#1" target="_blank">ç¾Žå‘è”åˆå›½æå‡ºå…³æ³¨ ä¿ƒä¸­å…±åœæ­¢è¿«å®³æ³•è½®åŠŸ</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/26/n12711986.md#1">é¢„è¨€è¯•æžï¼šå…±äº§å…šäº¡äºŽä½•æ—¶ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/30/n12723183.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘æ‡‚å¾—é¸Ÿè¯­ åŽ†å²ä¸ŠçœŸæœ‰è¿™æ ·çš„äºº</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/20/12/29/n12651261.md#1">è½®å›žè½¬ç”Ÿ å†¤å®¶å˜æˆæ¯å­</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/18/n12695507.md#1">ã€å‘½ç†ã€‘è¢«å†¤æž‰é™·å®³çš„å¥½äºº çš‡å¤©èƒ½ä¸ç®¡å—ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728948.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘æ–¯é‡Œå…°å¡å‰æ€»ç»Ÿè½¬ä¸–å†œå®¶ç”·å­©</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/4/n12731608.md#1">ã€æ¨ªæ²³è§‚ç‚¹ã€‘ä¸–å«ä¸­å›½è°ƒæŸ¥ä¸å¯ä¿¡ ç¾Žå›½ä¸ºä½•é‡è¿”</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/3/n12731068.md#1">ã€æ—¶äº‹çºµæ¨ªã€‘æ‹œç™»æ–½å†·æš´åŠ›ï¼Ÿä¹ å¤§æ¸…æ´—é‡ç”Ÿæ­»æˆ˜ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/3/n12731061.md#1">ã€çè¨€çœŸè¯­ã€‘é»„æ¹›æ·±ï¼šæµ·æ´‹å…¬å›­å¤§è½¬åž‹é‡ç”Ÿéš¾</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727425.md#1">æŽ¥å—å‘åž‹å¸ˆä¹‰å‰ª æµæµªæ±‰ç§’å˜ç»…å£«ç”·éœ‡æƒŠç½‘å‹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726784.md#1">ã€ç§¦é¹ç›´æ’­ã€‘ç¼…å†›æ–¹æŠ“æ˜‚å±±ç´ å­£ æ€¥åæ‹œç™»ä¹ è¿‘å¹³ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728478.md#1">ä¸­å…±å®˜åª’ç¾¤æ‰¹â€œåŽ•æ‰€é©å‘½â€æ‰“äº†è°çš„è„¸ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/3/n12729203.md#1">é»Žå§¿æºä¸‰ä¸ªå¥³å„¿è¡Œå±± ç²‰ä¸æ„å¤–èšç„¦ä¸€åŒæ³¢éž‹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726330.md#1">51å²å‘¨ä¼ é›„ç™»é™†ç»¼ 22å²å­Ÿç¾Žå²å½“å¯¼å¸ˆå¼•ç‹‚æ‰¹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12726845.md#1">é‡‘é©¬å½±åŽé©¬æ€çº¯ç–‘æ‚£æŠ‘éƒç—‡ åœå·¥åŠå¹´åŽé¦–å‘å£°</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728875.md#1">èŽ·é™ˆå¤å¤¸èµžé˜³å…‰åˆæ¼‚äº® æ¨é¢–é»˜é»˜ç‚¹èµžè§†é¢‘è‡ªåŠ±</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727150.md#1">ç«‹ç™¾ç—…æ¯’è‡´æ­»çŽ‡é«˜ ä¸“å®¶ç¤ºè­¦ä¸‹ä¸€åœºå¤§æµè¡Œå¨èƒ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726617.md#1">è¿™æ—¶å–æ°´æŽ’æ¯’å¿«ï¼æ—©æ™šå–å¯¹æ°´å…»ç”Ÿ è¿˜èƒ½æŽ§è¡€ç³–</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727769.md#1">è‹±å†›æˆ˜æœºç©ºè¢­ä¼Šæ‹‰å…‹æ´žç©´ å‡†ç¡®æ­¼ç­ISæˆå‘˜</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12724829.md#1">ä¹Œå…‹å…°ç½‘çº¢æ¯å¤©ç©¿19ä¸–çºªæœè£… å¦‚å¤å…¸ç¾Žäºº</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727507.md#1">2021å¹´2æœˆæ˜¯ä¸ªå®Œç¾ŽçŸ©å½¢ ä¼šæœ‰å¤§äº‹å‘ç”Ÿå—ï¼Ÿ</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/yxhgbq3433/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/yxhgbq3433/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/5/5/n11235674.htm">ä½“éªŒå®Œç¾Ž å…¬å¸è€æ¿ç››èµžç¥žéŸµæ¼”å‡ºæ°´å‡†é«˜è¶…</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/5/n11235674.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/yxhgbq3433/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/yxhgbq3433/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
